# agent-foundry

./: .gitignore  README.md
.claude/: CLAUDE.md
.claude/agent-memory/: just-like-software-architect-rippling-conway.md
.claude/agents/: arch-reviewer.md  backend-code-reviewer.md  design-architecture-agent.md  docs-writer.md  git-remote-pusher.md  planning-subagent.md  product-requirements-agent.md  project-scaffolder.md  python-backend-coder.md  python-test-runner.md  ralph-execution-engine.md  software-team-orchestrator.md
.claude/skills/pr-reviewer/: SKILL.md
.claude/skills/pr-reviewer/scripts/: check_prs.py  code_review_guidelines.md  post_review.py  pr_state.json
.claude/skills/token-budget/: SKILL.md
.claude/skills/token-budget/scripts/: budget_state.json  inject_budget.py  (+4 more)
.claude/skills/token-dashboard/: SKILL.md
chat_repo/: pyproject.toml
chat_repo/src/chat_repo/: __init__.py  agent.py  cli.py  repo.py  session.py
chat_repo/src/chat_repo/prompts/: system.md
chat_repo/src/chat_repo/tools/: git.py  github.py
chat_repo/tests/: conftest.py  test_git_tools.py  test_github_tools.py  test_integration.py  test_repo.py
knowledgebase/: llm_journey.md  start_startups.md
skill_planner/: design.md
skillful_agent/: .env.example  pyproject.toml  run_runner.py
skillful_agent/.claude/: CLAUDE.md
skillful_agent/claude_workspace/: plan.md
skillful_agent/docs/: README.md  skill-authoring.md
skillful_agent/shared/reviews/: T005_preflight_quality_gate.md
skillful_agent/src/skillful_agent/: __init__.py  agent.py  budget_tracker.py  cl_agent.py  display.py  main.py  prompts.py  reminders.json  skill_manager.py  tools.py
skillful_agent/src/skillful_agent/skills/coding/: SKILL.md
skillful_agent/src/skillful_agent/skills/preflight/: SKILL.md
skillful_agent/src/skillful_agent/skills/preflight/scripts/: scan_diff.py
skillful_agent/src/skillful_agent/skills/task-reminder/: SKILL.md
skillful_agent/src/skillful_agent/skills/task-reminder/scripts/: list_reminders.py  save_reminder.py
skillful_agent/tests/: test_budget_tracker.py  test_reminder_scripts.py  test_scan_diff.py  test_skill_manager.py  test_tools.py
(+2 files in other folders)
