[project]
name = "chat-repo"
version = "0.1.0"
description = "Interactive terminal chat session for any GitHub repo or local codebase"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "anyio>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
chat-repo = "chat_repo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_repo"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "pyrefly>=0.15",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require external services)",
]
addopts = "-m 'not integration'"
